[package]
edition = "2021"
name = "solarium"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.3"
foonetic-macros = {git = "https://github.com/foonetic/macros", version = "0.1"}
portpicker = "0.1.0"
serde_json = "1.0"
clap = "= 3.0.0-beta.1" # must be pinned because of serum-dex/crank clap dependency
clap_derive = "= 3.0.0-beta.1" # must be pinned because of serum-dex/crank clap dependency

serum-common = { path = "../serum-dex/common", features = ["client"] }
crank = { path = "../serum-dex/dex/crank" }
solana-logger = "1.9.3"
serum_dex = "0.5.0"

solana-client = "1.9.3"
solana-program = "1.7.6"
solana-sdk = "1.4.14"
spl-token = "3.2.0"
tempfile = "3.0"
borsh = "0.9.1"
