[package]
edition = "2021"
name = "solarium"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.3"
foonetic-macros = {git = "https://github.com/foonetic/macros", version = "0.1"}
portpicker = "0.1.0"
serde = "1.0"
serde_json = "1.0"
clap = "= 3.0.0-beta.1" # must be pinned because of serum-dex/crank clap dependency
clap_derive = "= 3.0.0-beta.1" # must be pinned because of serum-dex/crank clap dependency

serum-common = { git = "https://github.com/project-serum/serum-dex", tag = "v0.5.4", features = ["client"] }
solana-logger = "1.9.3"
serum_dex = "0.5.0"
pyth-client = "0.5.0"

dex-v4 = {path = "../dex-v4/program"}

solana-client = "1.9.3"
solana-program = "1.9.4"
solana-sdk = "1.9.4"
# solana-sdk =  {path = "../solana"}
spl-token = "3.2.0"
tempfile = "3.0"
borsh = "0.9.1"

pyth-sim = { path = "./pyth" }
