[package]
edition = "2021"
name = "pyth-sim"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
solana-program = "1.9.4"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
thiserror = "1.0"
arrayref = "0.3.6"
bytemuck = "1.7.3"
num_enum = "0.5.6"
num_enum_derive = "0.5.6"
pyth-client = {version = "0.3.0", features = ["no-entrypoint"]}
serum_dex = {version = "0.5.0", features = ["no-entrypoint"]}
serde = { version = "1.0.136", features = ["derive"] }
borsh = "0.9"
borsh-derive = "0.9.0"


[dev-dependencies]
solana-program-test = "1.9.4"
solana-sdk = "1.9.4"

[lib]
crate-type = ["cdylib", "lib"]

